Removed some 1.5-only methods and replaced them with 1.4-compatible ones.
git-svn-id: https://citdcbmipav.cit.nih.gov/repos-pub/mipav@1696 ba61647d-9d00-f842-95cd-605cb4296b96